# VST-Orchid-like-plugin

./: BUILD.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: ChordEngine.cpp  ChordEngine.h  KeyboardMapper.cpp  KeyboardMapper.h  KeyboardMapperMac.mm  MidiRouter.cpp  MidiRouter.h  OrchidParameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthEngine.cpp  SynthEngine.h  SynthVoice.cpp  SynthVoice.h  VoicingEngine.cpp  VoicingEngine.h
src/ui/: ChordButtonPanel.cpp  ChordButtonPanel.h  CircleOfFifthsDisplay.cpp  CircleOfFifthsDisplay.h  KeyboardDisplay.cpp  KeyboardDisplay.h  MidiConfigPanel.cpp  MidiConfigPanel.h  SynthPanel.cpp  SynthPanel.h  VoicingPanel.cpp  VoicingPanel.h
tests/: CMakeLists.txt  ChordEngineTest.cpp  VoicingEngineTest.cpp
